; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/hastd/extr_hastd.c_child_exit_log.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/hastd/extr_hastd.c_child_exit_log.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [43 x i8] c"Worker process exited gracefully (pid=%u).\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"Worker process killed (pid=%u, signal=%d).\00", align 1
@.str.2 = private unnamed_addr constant [58 x i8] c"Worker process exited ungracefully (pid=%u, exitcode=%d).\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @child_exit_log to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @child_exit_log(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = call i64 @WIFEXITED(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @WEXITSTATUS(i32 %9)
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %8
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @pjdlog_debug(i32 1, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %37

15:                                               ; preds = %8, %2
  %16 = load i32, i32* %4, align 4
  %17 = call i64 @WIFSIGNALED(i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %15
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @WTERMSIG(i32 %21)
  %23 = call i32 @pjdlog_error(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0), i32 %20, i32 %22)
  br label %36

24:                                               ; preds = %15
  %25 = load i32, i32* %3, align 4
  %26 = load i32, i32* %4, align 4
  %27 = call i64 @WIFEXITED(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @WEXITSTATUS(i32 %30)
  br label %33

32:                                               ; preds = %24
  br label %33

33:                                               ; preds = %32, %29
  %34 = phi i32 [ %31, %29 ], [ -1, %32 ]
  %35 = call i32 @pjdlog_error(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.2, i64 0, i64 0), i32 %25, i32 %34)
  br label %36

36:                                               ; preds = %33, %19
  br label %37

37:                                               ; preds = %36, %12
  ret void
}

declare dso_local i64 @WIFEXITED(i32) #1

declare dso_local i32 @WEXITSTATUS(i32) #1

declare dso_local i32 @pjdlog_debug(i32, i8*, i32) #1

declare dso_local i64 @WIFSIGNALED(i32) #1

declare dso_local i32 @pjdlog_error(i8*, i32, i32) #1

declare dso_local i32 @WTERMSIG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
